# Firefox-Muter

./: Muter.sln  README.txt  build-MuterPulseAudio-32.sh  build-MuterPulseAudio-64.sh  build-MuterPulseAudio.sh  index.html  muter-0.3.xpi  muter-0.4.xpi  muter-0.5.xpi  muter-0.6.xpi  muter-0.7.xpi  muter-0.8.2.xpi  muter-0.8.xpi  muter-0.9.1.xpi  muter-0.9.2.xpi  muter-0.9.3.xpi  muter-0.9.4.xpi  muter-0.9.5.xpi  muter-0.9.6.xpi  muter-0.9.7.xpi  muter-0.9.8.xpi  muter-0.9.9.xpi  muter-0.9.xpi  muter-1.0.0.xpi  muter-1.0.1.xpi  muter-8.0.3.xpi  muter-latest.xpi  muter.xpi  update.rdf
MuterHook/: ApiHooks.cpp  ApiHooks.h  AudioVolume.cpp  AudioVolume.h  BasicHooks.cpp  BasicHooks.h  ComHooks.cpp  ComHooks.h  DllEntry.cpp  DllEntry.h  HookImportFunction.cpp  HookImportFunction.h  HookMgr.cpp  HookMgr.h  HookedDsound.h  MuterHook.cpp  MuterHook.h  MuterHook.vcproj  MuterHook.vcxproj  MuterHook.vcxproj.filters  QQMusicHook.cpp  QQMusicHook.h  SDKTrace.cpp  SDKTrace.h  SoundHooks.cpp  SoundHooks.h  ThTypes.cpp  ThTypes.h  muterhook.sln  mydsound.h  stdafx.h
MuterPulseAudio/: .cproject  .project  AUTHORS  COPYING  configure.ac
MuterPulseAudio/src/: AudioMixerControl.cpp  AudioMixerControl.h  Makefile.am  MuterPulseAudio.c  MuterPulseAudio.cpp  MuterPulseAudio.h  SinkInput.cpp  SinkInput.h  TestAudioMixerControl.cpp
MuterWin7/: AudioVolume.cpp  AudioVolume.h  DllEntry.cpp  MuterWin7.cpp  MuterWin7.h  MuterWin7.rc  MuterWin7.vcxproj  MuterWin7.vcxproj.filters  ReadMe.txt  SDKTrace.cpp  SDKTrace.h  resource.h  stdafx.cpp  stdafx.h
Test/: CNTV.txt  firefox-muter-test.html
Test/TestFlash/: flash.html
Test/TestHTML5/: html5.html
Test/TestQuickTime/: quicktime.html
Test/TestWindowsMediaPlayer/: WindowsMediaPlayer.html  cet4-test.wma
extension/: chrome.manifest  install.rdf
extension/chrome/content/: feedback.js  feedback.xul  muterSettings.js  muterSettings.xul  muterSkin.js  navigationWizard.xml  overlay.js  overlay.xul  progressBar.xml  reportPreviewTemplate.html  reportTemplate.html
extension/chrome/skin/: feedback.css  muter.css  muter_animation.css
extension/components/: FirefoxObserver.js
extension/defaults/preferences/: prefs.js
extension/modules/: Services.jsm  muterHook.jsm  muterUtils.jsm
muter@yxl.name/: chrome.manifest  install.rdf
muter@yxl.name/chrome/content/: muterSettings.js  overlay.js  overlay.xul
muter@yxl.name/chrome/skin/: muter.css  (+1 more)
muter@yxl.name/modules/: muterHook.jsm
tools/: beautify.komodotool  buildxpi.bat
update/: skin.json
www/: feedback.php
www/Test/: firefox-muter-test.html
(+34 files in other folders)
