dnl Process this file with autoconf to produce a configure script.
# Prelude.
AC_PREREQ(2.59)
AC_INIT([MuterPulseAudio], [1.0], [http://yxl.github.com/Firefox-Muter/])
AC_CONFIG_SRCDIR(src/MuterPulseAudio.h)
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([-Wall -Werror])

# Checks for programs
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries

# Checks for header files

# Checks for typedefs, structures

# Checks for library functions

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

